Revision history for Perl extension File::ShareDir

0.99_01 Thu 25 Oct 2007
	- Moving to a production version
	- Updating tests a little
	- Adding the class_file function
	- Allow *_file to find any kind of path, not just files (hdp)

0.05 Mon  4 Sep 2006
	- Upgrading to Module::Install 0.64

0.04 Tue May 9 2006
	- Made module_dir work properly under MSWin32 (ishigaki)

0.03 Fri Dec 27 2006
	- Upgraded to Module::Install 0.55
	- Added an additional test case for a bug(sort of) in 0.54

0.02 Mon Dec 11 2005
	- Made dist_file work properly with Module::Install::Share

0.01 Sun Dec 10 2005
	- First implementation